[gd_scene load_steps=4 format=3 uid="uid://ccuqysv56rsg6"]

[ext_resource type="Script" uid="uid://5vkhe35kmaqr" path="res://interact.gd" id="1_sdbch"]
[ext_resource type="Texture2D" uid="uid://b5f6c6g2p75oj" path="res://GamejamAssets/TextIcon.PNG" id="2_sdbch"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p64ix"]
size = Vector2(266, 180)

[node name="Interact" type="Area2D"]
script = ExtResource("1_sdbch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(134, 90)
scale = Vector2(-0.63532007, 0.990941)
shape = SubResource("RectangleShape2D_p64ix")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(242.00002, -7.999996)
scale = Vector2(0.07574647, 0.06875419)
texture = ExtResource("2_sdbch")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
